 -- 0.264 --
* Some code cleanup
* Added vertical tiling of windows
* Nick and password are now taken from favorite hubs on redirect (thanks saurod)
* Fixed a case sensitivity bug in favorite hubs (thanks saurod)
* Locale formatting of exact size in search (thanks saurod)
* Fixed a bug where directories were not correctly returned (thanks saurod)


 -- 0.263 2003-09-30 --
* Fixed a mouse click crash (thanks sed)
* Fixed so that donating is done in euro's from the help menu (why don't you try it out =)
* Port can now be seen in the hub frame title (thanks sed)
* Fixed a major bug with filename case sensitivity (causing strange queue behaviour)
* Fixed another queue crash bug
* Queue now starts fully expanded (makes sense with smart queues)
* Fixed compiling issue on vc6

 -- 0.262 2003-09-24 --
* Added arrows and tri-state sorting (thanks saurod)
* Fixed a crash with certain queues when opening queue frame
* Fixed a bug in the search frame not setting b/kB/MB correctly when searching for alternates
* Fixed bad loading of menu translations
* Fixed tag not being removed when someone turns it off
* Added connection flooding protection
* Fixed a bug with file extension being cut off when moving files in certain windows setups (I think, not tested)
* Small fix to ip detect code (thanks fusbar)
* Fixed a file read crash
* Fixed so that DC++ correctly returns hub port in search results (thanks sed)
* Now correctly reacts to multiple $Hello's with own nick
* When moving items in the fav lists, items are scrolled into view if moved outside the window
* Added "View as text file" option when downloading files (only shows the first 32k though...)
* Made it possible to compile using the stl supplied in msvc 7.x, it's untested though, and I won't maintain it
  (I just wanted to see if it works)
* Already existing files are prioritised when queueing
* Changed so that files are downloaded in alphabetical order when first added (this makes opening large user file 